# EnergyGradient

./: .gitignore  CMakeLists.txt  conf  main.cpp  main.py
Cell/: Cell.cpp  Cell.h
Edge/: Edge.cpp  Edge.h
Polygon/: Polygon.cpp  Polygon.h
Run/: Box.cpp  Box.h  Run.cpp  Run.h
Vertex/: Vertex.h
analysis/: Plotting.py
data/: cell.csv  polygon.csv  polygons.csv  vertices.csv
data/output/vtk/: topo_0.vtk  topo_1.vtk  topo_10.vtk  topo_11.vtk  topo_12.vtk  topo_13.vtk  topo_14.vtk  topo_15.vtk  topo_16.vtk  topo_17.vtk  topo_18.vtk  topo_19.vtk  topo_2.vtk  topo_20.vtk  topo_21.vtk  topo_22.vtk  topo_23.vtk  topo_24.vtk  topo_25.vtk  topo_26.vtk  topo_27.vtk  topo_28.vtk  topo_29.vtk  topo_3.vtk  topo_30.vtk  topo_31.vtk  topo_32.vtk  topo_33.vtk  topo_34.vtk  topo_35.vtk  topo_36.vtk  topo_37.vtk  topo_38.vtk  topo_39.vtk  topo_4.vtk  topo_40.vtk  topo_41.vtk  topo_42.vtk  topo_43.vtk  topo_44.vtk  (+60 more)
loader/: loader.cpp  loader.h
